--- a/src/components/ProfileNavigation/ProfileNavigation.module.css
+++ b/src/components/ProfileNavigation/ProfileNavigation.module.css
@@ -1,12 +1,18 @@
 .nav {
+  display: flex;
+  gap: 38px;
+}
+
+.container {
+  margin: 46px 108px 46px 108px;
 }
 
 .link {
-  margin-right: 38px;
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
   font-size: 12px;
   color: #000;
+  text-decoration: none;
 }
 
 .link:hover {
@@ -15,8 +21,8 @@
 }
 
 .active {
-  text-decoration: none; /* вимикаємо стандартне підкреслення */
-  border-bottom: 2px solid #333; /* створюємо «підкреслення» */
+  text-decoration: none;
+  border-bottom: 2px solid #333;
   padding-bottom: 4px;
   font-weight: 600;
 }
@@ -26,4 +32,5 @@
   font-weight: 600;
   font-size: 40px;
   color: #000;
+  margin-bottom: 16px;
 }
