--- a/src/components/ProfileNavigation/ProfileNavigation.module.css
+++ b/src/components/ProfileNavigation/ProfileNavigation.module.css
@@ -25,6 +25,10 @@
   border-bottom: 2px solid #333;
   padding-bottom: 4px;
   font-weight: 600;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 12px;
+  color: #000;
 }
 
 .title {
