--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: flex-start;
     flex-direction: column-reverse;
+    font-family: var(--font-family);
 }
 
 .filtersLinkBtn {
