--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -4,11 +4,19 @@
   justify-content: center;
   gap: 4px;
   margin-top: 24px;
+  margin-bottom: 48px;
   flex-wrap: wrap;
+  font-family: var(--font-family);
 }
-
+.containerbtn {
+  display: flex;
+  margin-left: 18px;
+  margin-right: 18px;
+  gap: 4px;
+}
 .pageBtn {
   border: 1px solid #9b6c43;
+  border-radius: 8px;
   background-color: transparent;
   border: none;
   padding: 6px 12px;
@@ -16,21 +24,15 @@
   font-size: 16px;
   width: 40px;
   height: 40px;
-  max-width: 100%;
+  max-width: 100%; 
+  font-family: var(--font-family);
 }
-.pageBtn:hover {
-  background-color: #6d554b;
-  border-radius: 6px;
-}
-.pageBtn:focus {
-  box-shadow: 0 0 0 6px rgba(78, 70, 180, 0.12), 0 0 0 2px white;
-  background-color: #6d554b;
-}
+
 .arrow {
   background-color: #9b6c43;
   border: none;
   color: white;
-  padding: 8px 12px;
+  padding: 4px;
   border-radius: 6px;
   cursor: pointer;
   transition: opacity 0.3s ease;
@@ -39,10 +41,6 @@
   justify-content: center;
   width: 40px;
   height: 40px;
-}
-.arrow:hover {
-  background-color: #6d554b;
-  border-radius: 6px;
 }
 
 .arrow:disabled {
@@ -55,6 +53,7 @@
   background-color: #9b6c43;
   color: #fff;
   border-radius: 8px;
+  font-weight: 600;
   width: 40px;
   height: 40px;
 }
