--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,6 @@
   box-sizing: border-box;
 }
 
-
-
 :root {
   /* Кольори */
   --black: #000;
@@ -73,4 +71,19 @@ img {
 
 li {
   list-style: none;
+}
+
+a {
+  color: currentColor;
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
