--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -1,12 +1,11 @@
-.wrapper {
-  padding: 40px 20px;
+.container {
+  padding-top: 48px;
+  padding-bottom: 48px;
+  font-family: var(--font-family);
 }
 
-.sidebar {
-}
-
-.content {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+.title {
+  font-weight: 600;
+  font-size: 40px;
+  margin-bottom: 16px;
 }
