--- a/src/components/RecipeDetails/RecipeDetails.module.css
+++ b/src/components/RecipeDetails/RecipeDetails.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 32px 16px;
+  padding: 0px;
 }
 
 .title {
@@ -34,6 +34,7 @@
   justify-content: center;
   margin: 0 auto;
   padding: 0px;
+  margin-bottom: 24px;
 }
 .infoBox {
   background: var(--light-beige);
@@ -100,16 +101,18 @@
   transition: color 0.2s ease;
 } */
 
+.imageWrapper {
+  margin-bottom: 32px;
+}
 .infocomtainer {
+  display: flex;
+  flex-direction: column;
   margin: 0;
+  gap: 40px;
 }
 
 /* 🔹 Tablet */
 @media (min-width: 768px) {
-  .wrapper {
-    padding: 48px 32px;
-    max-width: 768px;
-  }
   .title {
     margin-top: 0;
   }
@@ -147,13 +150,11 @@
   }
 }
 
-@media (min-width: 1200px) {
-  .wrapper {
-    max-width: 1225px;
-    padding-right: 107.5px;
-    padding-left: 107.5px;
-  }
+.imageWrapper {
+  margin-bottom: none;
+}
 
+@media (min-width: 1440px) {
   .title {
     text-align: start;
   }
@@ -174,6 +175,7 @@
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
+    justify-content: flex-start;
     gap: 24px;
   }
   .infoBox {
