--- a/src/components/RecipeDetails/RecipeDetails.module.css
+++ b/src/components/RecipeDetails/RecipeDetails.module.css
@@ -46,6 +46,12 @@
   margin-bottom: 41px;
 }
 
+.infoBoxItem {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
 .subtitle {
   font-size: 24px;
   font-weight: 600;
