--- a/src/pages/RecipeViewPage/RecipeViewPage.module.css
+++ b/src/pages/RecipeViewPage/RecipeViewPage.module.css
@@ -13,7 +13,7 @@
 @media (min-width: 1440px) {
   .page {
     min-width: 1225px;
-    padding: 0;
+    padding-top: 48px;
     display: flex;
     gap: 24px;
     align-items: flex-start;
