--- a/src/components/RecipeDetails/RecipeDetails.module.css
+++ b/src/components/RecipeDetails/RecipeDetails.module.css
@@ -12,7 +12,8 @@
   font-weight: 600;
   line-height: 1.3;
   margin-bottom: 32px;
-  color: black;
+  font-family: var(--font-family);
+  color: var(--black);
 }
 .blockwrapper {
   display: flex;
@@ -53,8 +54,15 @@
 }
 
 .subtitle {
-  font-size: 24px;
+  font-size: 32px;
   font-weight: 600;
+  margin-bottom: 16px;
+  font-family: var(--font-family);
+  color: var(--black);
+}
+
+.unsubtitle {
+  font-size: 24px;
   margin-bottom: 15px;
 }
 
@@ -62,6 +70,7 @@
   font-size: 16px;
   line-height: 1.55;
   font-weight: 400;
+  font-family: var(--font-family);
   color: var(--black);
   margin-bottom: 16px;
 }
@@ -85,6 +94,7 @@
 /* 🔹 Tablet */
 @media (min-width: 768px) {
   .title {
+    font-size: 48px;
     margin-top: 0;
     text-align: start;
   }
