--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -1,6 +1,8 @@
 .container {
   padding-top: 48px;
   padding-bottom: 48px;
+  padding-left: 16px;
+  padding-right: 16px;;
   font-family: var(--font-family);
 }
 
@@ -8,4 +10,23 @@
   font-weight: 600;
   font-size: 40px;
   margin-bottom: 16px;
+}
+
+
+@media (min-width: 768px) {
+  .container {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+  
+  .title {
+    font-size: 32px;
+    margin-bottom: 12px;
+  }
+}
+@media (min-width: 1440px) {
+  .container {
+    padding-left: 108px
+    
+  }
 }
